feat: implement ProtocoloPre entity, repository, and request DTO to support pre-form registration