@@ -2,10 +2,13 @@ package com.viteprotocolo.protocolo.service;
 
 import com.viteprotocolo.auth.entity.Municipios;
 import com.viteprotocolo.protocolo.entity.Protocolo;
+import com.viteprotocolo.protocolo.entity.ProtocoloPre;
 import com.viteprotocolo.protocolo.entity.dto.*;
 import com.viteprotocolo.protocolo.entity.dto.protocolo.ProtocoloRequest;
 import com.viteprotocolo.protocolo.entity.dto.protocolo.ProtocoloResponse;
 import com.viteprotocolo.protocolo.entity.emb.*;
+import com.viteprotocolo.protocolo.entity.preDto.ProtocoloPreRequest;
+import com.viteprotocolo.protocolo.repository.PortocoloPreRepository;
 import com.viteprotocolo.protocolo.repository.ProtocoloRespository;
 import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpServletRequest;
@@ -13,6 +16,8 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -26,24 +31,27 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
-import java.util.NoSuchElementException;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
-// ProtocoloServiceTest.java
 
 @ExtendWith(MockitoExtension.class)
 class ProtocoloServiceTest {
 
     @Mock
-    private ProtocoloRespository protocoloRespository;
+    private ProtocoloRespository protocoloRepository;
     @Mock
     private ProtocoloMapper protocoloMapper;
+    @Mock
+    private PortocoloPreRepository protocoloPreRepository;
 
     @InjectMocks
     private ProtocoloService service;
+
+    @Captor
+    private ArgumentCaptor<Protocolo> protocoloCaptor;
 
     private Protocolo protocolo;
     private ProtocoloResponse response;
@@ -56,6 +64,9 @@ class ProtocoloServiceTest {
         protocolo = Protocolo.builder()
                 .id("uuid-1")
                 .dataCriacao(now)
+                .cpf_atendente("12345678900")
+                .finalizado(false)
+                .preId(10L)
                 .linhaDoTempo(LinhaDoTempo.builder()
                         .numeroOcorrencia("OC-001")
                         .municipio("SAO_PAULO")
@@ -70,16 +81,20 @@ class ProtocoloServiceTest {
                 .parecerFinal(ParecerFinal.builder().elegibilidade("ELEGIVEL").motivos(List.of("OK")).build())
                 .build();
 
-        response = new ProtocoloResponse(
-                "uuid-1", now,
-                new DesfechoDTO(now, now),
-                new HistoriaDTO(65, true, Map.of("AVC", true), List.of()),
-                new LinhaDoTempoDTO("OC-001", "SAO_PAULO", now, now, now, "1h"),
-                new NeurologicaDTO("SIM", "NAO", "NORMAL", "NORMAL", "NAO"),
-                new ParametrosDTO(100L, "120/80", 98),
-                new UnidadeDTO("Unidade X", now),
-                new ParecerFinalDTO("ELEGIVEL", List.of("OK"))
-        );
+        response = ProtocoloResponse.builder()
+                .id("uuid-1")
+                .cpf_atendente("12345678900")
+                .dataCriacao(now)
+                .finalizado(false)
+                .preId(10L)
+                .DesfechoCenaSection(new DesfechoDTO(now, now))
+                .HistoriaClinicaSection(new HistoriaDTO(65, true, Map.of("AVC", true), List.of()))
+                .LinhaDoTempoSection(new LinhaDoTempoDTO("OC-001", "SAO_PAULO", now, now, now, "1h"))
+                .AvaliacaoNeurologicaSection(new NeurologicaDTO("SIM", "NAO", "NORMAL", "NORMAL", "NAO"))
+                .ParametrosClinicosSection(new ParametrosDTO(100L, "120/80", 98))
+                .UnidadeReferenciaSection(new UnidadeDTO("Unidade X", now))
+                .ParecerFinalSection(new ParecerFinalDTO("ELEGIVEL", List.of("OK")))
+                .build();
 
         request = new ProtocoloRequest(
                 new DesfechoDTO(now, now),
@@ -88,7 +103,8 @@ class ProtocoloServiceTest {
                 new NeurologicaDTO("SIM", "NAO", "NORMAL", "NORMAL", "NAO"),
                 new ParametrosDTO(100L, "120/80", 98),
                 new UnidadeDTO("Unidade X", now),
-                new ParecerFinalDTO("ELEGIVEL", List.of("OK"))
+                new ParecerFinalDTO("ELEGIVEL", List.of("OK")),
+                "12345678900"
         );
     }
 
@@ -100,23 +116,27 @@ class ProtocoloServiceTest {
     @DisplayName("Deve lançar IllegalArgumentException quando o request for nulo")
     void createProtocolo_nullRequest_throwsIllegalArgumentException() {
         assertThrows(IllegalArgumentException.class, () -> service.createProtocolo(null));
-        verifyNoInteractions(protocoloRespository, protocoloMapper);
+        verifyNoInteractions(protocoloRepository, protocoloMapper);
     }
 
     @Test
     @DisplayName("Deve criar e retornar ProtocoloResponse corretamente")
     void createProtocolo_validRequest_returnsResponse() {
         when(protocoloMapper.toProtocolo(request)).thenReturn(protocolo);
-        when(protocoloRespository.save(protocolo)).thenReturn(protocolo);
+        when(protocoloRepository.save(any(Protocolo.class))).thenReturn(protocolo);
         when(protocoloMapper.toResponse(protocolo)).thenReturn(response);
 
         ProtocoloResponse result = service.createProtocolo(request);
 
         assertNotNull(result);
         assertEquals("uuid-1", result.id());
-        assertNotNull(protocolo.getDataCriacao());
+        assertEquals("12345678900", result.cpf_atendente());
+
         verify(protocoloMapper).toProtocolo(request);
-        verify(protocoloRespository).save(protocolo);
+        verify(protocoloRepository).save(protocoloCaptor.capture());
+
+        Protocolo savedProtocolo = protocoloCaptor.getValue();
+        assertNotNull(savedProtocolo.getDataCriacao(), "A data de criação deve ser preenchida antes de salvar");
         verify(protocoloMapper).toResponse(protocolo);
     }
 
@@ -124,7 +144,7 @@ class ProtocoloServiceTest {
     @DisplayName("Deve propagar exceção do repositório como IllegalArgumentException")
     void createProtocolo_repositoryThrows_wrapsException() {
         when(protocoloMapper.toProtocolo(request)).thenReturn(protocolo);
-        when(protocoloRespository.save(protocolo)).thenThrow(new RuntimeException("DB error"));
+        when(protocoloRepository.save(any())).thenThrow(new RuntimeException("DB error"));
 
         assertThrows(IllegalArgumentException.class, () -> service.createProtocolo(request));
     }
@@ -139,25 +159,14 @@ class ProtocoloServiceTest {
         Pageable pageable = PageRequest.of(0, 10);
         Page<Protocolo> page = new PageImpl<>(List.of(protocolo));
 
-        when(protocoloRespository.findAll(pageable)).thenReturn(page);
+        when(protocoloRepository.findAll(pageable)).thenReturn(page);
         when(protocoloMapper.toResponse(protocolo)).thenReturn(response);
 
         Page<ProtocoloResponse> result = service.getAllProtocolos(pageable);
 
         assertFalse(result.isEmpty());
         assertEquals(1, result.getTotalElements());
-        assertEquals("uuid-1", result.getContent().get(0).id());
-    }
-
-    @Test
-    @DisplayName("Deve retornar página vazia quando não há protocolos")
-    void getAllProtocolos_emptyRepository_returnsEmptyPage() {
-        Pageable pageable = PageRequest.of(0, 10);
-        when(protocoloRespository.findAll(pageable)).thenReturn(Page.empty());
-
-        Page<ProtocoloResponse> result = service.getAllProtocolos(pageable);
-
-        assertTrue(result.isEmpty());
+        assertEquals("uuid-1", result.getContent().getFirst().id());
     }
 
     // -------------------------------------------------------------------------
@@ -174,81 +183,31 @@ class ProtocoloServiceTest {
         Page<ProtocoloResponse> result = service.getAllProtocolosByMunicipio(httpRequest, pageable);
 
         assertTrue(result.isEmpty());
-        verifyNoInteractions(protocoloRespository);
-    }
-
-    @Test
-    @DisplayName("Deve retornar Page.empty quando o cookie estiver em branco")
-    void getAllProtocolosByMunicipio_blankCookieValue_returnsEmptyPage() {
-        Cookie blankCookie = new Cookie("municipio_protocolo", "   ");
-        HttpServletRequest httpRequest = mock(HttpServletRequest.class);
-        when(httpRequest.getCookies()).thenReturn(new Cookie[]{blankCookie});
-        Pageable pageable = PageRequest.of(0, 10);
-
-        Page<ProtocoloResponse> result = service.getAllProtocolosByMunicipio(httpRequest, pageable);
-
-        assertTrue(result.isEmpty());
-        verifyNoInteractions(protocoloRespository);
-    }
-
-    @Test
-    @DisplayName("Deve retornar Page.empty quando o cookie não for o 'municipio_protocolo'")
-    void getAllProtocolosByMunicipio_wrongCookieName_returnsEmptyPage() {
-        Cookie wrongCookie = new Cookie("outro_cookie", "SAO_PAULO");
-        HttpServletRequest httpRequest = mock(HttpServletRequest.class);
-        when(httpRequest.getCookies()).thenReturn(new Cookie[]{wrongCookie});
-        Pageable pageable = PageRequest.of(0, 10);
-
-        Page<ProtocoloResponse> result = service.getAllProtocolosByMunicipio(httpRequest, pageable);
-
-        assertTrue(result.isEmpty());
-        verifyNoInteractions(protocoloRespository);
+        verifyNoInteractions(protocoloRepository);
     }
 
     @Test
     @DisplayName("Deve filtrar por município quando o cookie for válido")
     void getAllProtocolosByMunicipio_validCookie_returnsMappedPage() {
-        String municipioEnum = Municipios.SAO.name(); // ajuste ao seu enum
-        String municipioDisplay = Municipios.SAO.getNomeExibicao();
+        // Usa o primeiro municipio do Enum para garantir que existe e não quebra com IllegalArgumentException do valueOf
+        Municipios municipio = Municipios.values()[0];
+        String municipioEnumStr = municipio.name();
+        String municipioDisplay = municipio.getNomeExibicao();
 
-        Cookie validCookie = new Cookie("municipio_protocolo", municipioEnum);
+        Cookie validCookie = new Cookie("municipio_protocolo", municipioEnumStr);
         HttpServletRequest httpRequest = mock(HttpServletRequest.class);
         when(httpRequest.getCookies()).thenReturn(new Cookie[]{validCookie});
 
         Pageable pageable = PageRequest.of(0, 10);
         Page<Protocolo> page = new PageImpl<>(List.of(protocolo));
 
-        when(protocoloRespository.findByLinhaDoTempo_Municipio(municipioDisplay, pageable)).thenReturn(page);
+        when(protocoloRepository.findByLinhaDoTempo_MunicipioAndFinalizadoFalse(municipioDisplay, pageable)).thenReturn(page);
         when(protocoloMapper.toResponse(protocolo)).thenReturn(response);
 
         Page<ProtocoloResponse> result = service.getAllProtocolosByMunicipio(httpRequest, pageable);
 
         assertFalse(result.isEmpty());
-        verify(protocoloRespository).findByLinhaDoTempo_Municipio(municipioDisplay, pageable);
-    }
-
-    // -------------------------------------------------------------------------
-    // getProtocoloById
-    // -------------------------------------------------------------------------
-
-    @Test
-    @DisplayName("Deve retornar ProtocoloResponse quando o ID existir")
-    void getProtocoloById_existingId_returnsResponse() {
-        when(protocoloRespository.findById("uuid-1")).thenReturn(Optional.of(protocolo));
-        when(protocoloMapper.toResponse(protocolo)).thenReturn(response);
-
-        ProtocoloResponse result = service.getProtocoloById("uuid-1");
-
-        assertNotNull(result);
-        assertEquals("uuid-1", result.id());
-    }
-
-    @Test
-    @DisplayName("Deve lançar NoSuchElementException quando o ID não existir")
-    void getProtocoloById_nonExistingId_throwsException() {
-        when(protocoloRespository.findById("id-inexistente")).thenReturn(Optional.empty());
-
-        assertThrows(NoSuchElementException.class, () -> service.getProtocoloById("id-inexistente"));
+        verify(protocoloRepository).findByLinhaDoTempo_MunicipioAndFinalizadoFalse(municipioDisplay, pageable);
     }
 
     // -------------------------------------------------------------------------
@@ -256,59 +215,88 @@ class ProtocoloServiceTest {
     // -------------------------------------------------------------------------
 
     @Test
-    @DisplayName("Deve retornar todos os protocolos quando nenhum filtro for passado")
-    void getProtocoloByIdWithParams_noFilters_returnsAll() {
-        Pageable pageable = PageRequest.of(0, 10);
-        Page<Protocolo> page = new PageImpl<>(List.of(protocolo));
-
-        when(protocoloRespository.findAll(any(Specification.class), eq(pageable))).thenReturn(page);
-        when(protocoloMapper.toResponse(protocolo)).thenReturn(response);
-
-        Page<ProtocoloResponse> result = service.getProtocoloByIdWithParams(
-                null, null, null, null, null, pageable);
-
-        assertEquals(1, result.getTotalElements());
-    }
-
-    @Test
-    @DisplayName("Deve aplicar filtros quando os parâmetros forem informados")
+    @DisplayName("Deve aplicar Specification dinâmico ao buscar protocolos")
     void getProtocoloByIdWithParams_withFilters_appliesSpec() {
         Pageable pageable = PageRequest.of(0, 10);
         Page<Protocolo> page = new PageImpl<>(List.of(protocolo));
 
-        when(protocoloRespository.findAll(any(Specification.class), eq(pageable))).thenReturn(page);
+        when(protocoloRepository.findAll(any(Specification.class), eq(pageable))).thenReturn(page);
         when(protocoloMapper.toResponse(protocolo)).thenReturn(response);
 
         Page<ProtocoloResponse> result = service.getProtocoloByIdWithParams(
                 "uuid-1", "Unidade X", "OC-001", LocalDate.now(), "SAO_PAULO", pageable);
 
         assertEquals(1, result.getTotalElements());
-        verify(protocoloRespository).findAll(any(Specification.class), eq(pageable));
-    }
-
-    @Test
-    @DisplayName("Deve retornar página vazia quando nenhum protocolo corresponder aos filtros")
-    void getProtocoloByIdWithParams_noMatch_returnsEmptyPage() {
-        Pageable pageable = PageRequest.of(0, 10);
-        when(protocoloRespository.findAll(any(Specification.class), eq(pageable))).thenReturn(Page.empty());
-
-        Page<ProtocoloResponse> result = service.getProtocoloByIdWithParams(
-                "inexistente", null, null, null, null, pageable);
-
-        assertTrue(result.isEmpty());
+        verify(protocoloRepository).findAll(any(Specification.class), eq(pageable));
     }
 
     // -------------------------------------------------------------------------
-    // deleteProtocoloById
+    // criarPrePreenchimento
     // -------------------------------------------------------------------------
 
     @Test
-    @DisplayName("Deve chamar deleteById no repositório com o ID correto")
-    void deleteProtocoloById_callsRepository() {
-        doNothing().when(protocoloRespository).deleteById("uuid-1");
+    @DisplayName("Deve salvar PrePreenchimento e Protocolo associado ao preId, retornando o PrePreenchimento")
+    void criarPrePreenchimento_validRequest_savesAndReturns() {
+        LocalDateTime now = LocalDateTime.now();
+        ProtocoloPreRequest req = new ProtocoloPreRequest("OC-002", "RIO_DE_JANEIRO", now);
 
-        assertDoesNotThrow(() -> service.deleteProtocoloById("uuid-1"));
+        ProtocoloPre savedPre = ProtocoloPre.builder()
+                .id(99L)
+                .numeroOcorrencia("OC-002")
+                .municipio("RIO_DE_JANEIRO")
+                .aberturaChamado(now)
+                .build();
 
-        verify(protocoloRespository).deleteById("uuid-1");
+        when(protocoloPreRepository.save(any(ProtocoloPre.class))).thenReturn(savedPre);
+
+        ProtocoloPre result = service.criarPrePreenchimento(req);
+
+        assertNotNull(result);
+        assertEquals(99L, result.getId());
+
+        verify(protocoloPreRepository).save(any(ProtocoloPre.class));
+        verify(protocoloRepository).save(protocoloCaptor.capture());
+
+        // Verifica se o protocolo criado carrega o preId e as informacoes bases
+        Protocolo protocoloCriado = protocoloCaptor.getValue();
+        assertNotNull(protocoloCriado);
+        assertEquals(99L, protocoloCriado.getPreId());
+        assertEquals("OC-002", protocoloCriado.getLinhaDoTempo().getNumeroOcorrencia());
+        assertEquals("RIO_DE_JANEIRO", protocoloCriado.getLinhaDoTempo().getMunicipio());
+        assertNotNull(protocoloCriado.getDataCriacao());
+    }
+
+    // -------------------------------------------------------------------------
+    // editProtocolo
+    // -------------------------------------------------------------------------
+
+    @Test
+    @DisplayName("Deve atualizar dados e setar finalizado como true quando editar protocolo existente")
+    void editProtocolo_existingProtocolo_updatesAndSetsFinalizadoTrue() {
+        Protocolo protocoloExistenteNoBanco = Protocolo.builder()
+                .id("uuid-2")
+                .finalizado(false)
+                .cpf_atendente(null)
+                .build();
+
+        Protocolo editRequest = Protocolo.builder()
+                .id("uuid-2")
+                .cpf_atendente("00011122233")
+                .unidade(Unidade.builder().unidadeReferenciaEleita("Hospital Novo").build())
+                .parecerFinal(ParecerFinal.builder().elegibilidade("INELEGIVEL").build())
+                .build();
+
+        when(protocoloRepository.findById("uuid-2")).thenReturn(Optional.of(protocoloExistenteNoBanco));
+        when(protocoloRepository.save(any(Protocolo.class))).thenAnswer(i -> i.getArgument(0));
+
+        Protocolo result = service.editProtocolo(editRequest);
+
+        assertNotNull(result);
+        assertEquals("00011122233", result.getCpf_atendente());
+        assertEquals("Hospital Novo", result.getUnidade().getUnidadeReferenciaEleita());
+        assertEquals("INELEGIVEL", result.getParecerFinal().getElegibilidade());
+        assertTrue(result.isFinalizado(), "A flag 'finalizado' deve estar true após a edição");
+
+        verify(protocoloRepository).save(protocoloExistenteNoBanco);
     }
 }
